tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/stderr.expected
Error:
    tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:1:1:
  |
1 | language ESSENCE' 1.0
  | ^^^^^^^^^^^^^^^^^^^^^
Warning: Essence prime file detected, type checking is off

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:52:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                    ^
Missing zero

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:56:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing <identifier>

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:56:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:56:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:56:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:56:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:56:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:58:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:22:58:
   |
22 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                          ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:52:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                    ^
Missing zero

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:56:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing <identifier>

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:56:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing Domain

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:56:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:56:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:56:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:56:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                        ^
Missing :

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:58:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                          ^^^^^^^^^^^^^^^^^^^^^^^^
Skipped tokens

tests/parse_print/autogen-bilals-fixed/8089eb489848ed165fbe9a1af7e6cd47/8089eb489848ed165fbe9a1af7e6cd47.eprime.essence:24:58:
   |
24 |         matrix indexed by [int(1..undefined(modulo zero: 2 % 0 : `int`))] of bool
   |                                                          ^
Missing Domain
